@@ -232,6 +232,11 @@ class CartDebug : public DebuggerSystem
     int getAddress(const string& label) const;
 
     /**
+      Load constants from list file (as generated by DASM).
+    */
+    string loadListFile();
+
+    /**
       Load user equates from symbol file (as generated by DASM).
     */
     string loadSymbolFile();
@@ -363,10 +368,15 @@ class CartDebug : public DebuggerSystem
     bool myAddrToLineIsROM;
 
     // Mappings from label to address (and vice versa) for items
-    // defined by the user (either through a symbol file or manually
+    // defined by the user (either through a DASM symbol file or manually
     // from the commandline in the debugger)
     AddrToLabel myUserLabels;
     LabelToAddr myUserAddresses;
+
+    // Mappings from label to address (and vice versa) for constants
+    // defined through a DASM lst file
+    AddrToLabel myUserCLabels;
+    // LabelToAddr myUserCAddresses;
 
     // Mappings for labels to addresses for system-defined equates
     // Because system equate addresses can have different names
@@ -383,7 +393,7 @@ class CartDebug : public DebuggerSystem
     uInt16 myLabelLength;
 
     // Filenames to use for various I/O (currently these are hardcoded)
-    string mySymbolFile, myCfgFile, myDisasmFile, myRomFile;
+    string myListFile, mySymbolFile, myCfgFile, myDisasmFile, myRomFile;
 
     /// Table of instruction mnemonics
     static const char* ourTIAMnemonicR[16]; // read mode
